--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,5 @@
 #+TITLE: NonSmoothSolvers.jl
 
-
-
 [[https://GillesBareilles.github.io/NonSmoothSolvers.jl/stable][https://img.shields.io/badge/docs-stable-blue.svg]]
 [[https://GillesBareilles.github.io/NonSmoothSolvers.jl/dev][https://img.shields.io/badge/docs-dev-blue.svg]]
 [[https://github.com/GillesBareilles/NonSmoothSolvers.jl/actions/workflows/CI.yml?query=branch%3Amain][https://github.com/GillesBareilles/NonSmoothSolvers.jl/actions/workflows/CI.yml/badge.svg?branch=main]]
@@ -14,7 +12,7 @@ Comments and suggestions are more than welcome, get in touch by opening an issue
 
 *Setup* is as follows: in a julia REPL (default environment):
 #+begin_src julia
-]add https://github.com/GillesBareilles/ConjugateGradient.jl https://github.com/GillesBareilles/ConvexHullProjection.jl https://github.com/GillesBareilles/NonSmoothProblems.jl https://github.com/GillesBareilles/NonSmoothSolvers.jl
+]add https://github.com/GillesBareilles/NonSmoothProblems.jl https://github.com/GillesBareilles/NonSmoothSolvers.jl
 #+end_src
 
 * Solvers
