--- a/readme.org
+++ b/readme.org
@@ -6,9 +6,9 @@
 [[https://codecov.io/gh/GillesBareilles/NonSmoothSolvers.jl][https://codecov.io/gh/GillesBareilles/NonSmoothSolvers.jl/branch/master/graph/badge.svg]]
 [[https://github.com/invenia/BlueStyle][https://img.shields.io/badge/code%20style-blue-4495d1.svg]]
 
-This package implements several algorithms for nonsmooth (nonconvex) optimization, including Gradient Sampling, nonsmooth BFGS and nonconvex proximal point.
+This package implements algorithms for nonsmooth optimization.
 The implementations follow closely the related papers, tuning parameters is advisable to get the best of the methods.
-Comments and suggestions are more than welcome, get in touch by opening an issue!
+Comments and suggestions are more than welcome, get in touch via mail or an issue!
 
 *Setup* is as follows: in a julia REPL (default environment):
 #+begin_src julia
@@ -19,17 +19,17 @@ Comments and suggestions are more than welcome, get in touch by opening an issue
 
 * Solvers
 The generic solvers implemented are:
-- Gradient Sampling
-  #+begin_quote
-*Gradient Sampling Methods for Nonsmooth Optimization*, J.V. Burke, F.E. Curtis, A.S. Lewis, M.L. Overton, L.E.A. Sims, 2018.
-  #+end_quote
 - Nonsmooth BFGS
   #+begin_quote
 *Nonsmooth optimization via quasi-Newton methods*, Adrian S. Lewis, Michael L. Overton, 2012
   #+end_quote
-- Projection of a point on a polytope
+- VU bundle
   #+begin_quote
-  *Finding the Nearest Point in A Polytope*, Philip Wolfe, Mathematical Programming, 1976
+  *A VU-algorithm for Convex Minimization*, R. Mifflin & C. Sagastizábal, Mathematical Programming, 2005
+  #+end_quote
+- Gradient Sampling
+  #+begin_quote
+  *Gradient Sampling Methods for Nonsmooth Optimization*, J.V. Burke, F.E. Curtis, A.S. Lewis, M.L. Overton, L.E.A. Sims, 2018.
   #+end_quote
 
 * Usage
